{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 12,
  "lineage": "fab8cc7e-3ab5-7e25-0f69-0fde4ffb17c8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b842323e-2bef-4fc7-9069-b51f777364a6/resourceGroups/rg-ace-minilab/providers/Microsoft.Network/networkInterfaces/nic-vm-ace-minilab-01",
            "internal_domain_name_suffix": "zeq0eldry5oulbffey3a5fidkb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b842323e-2bef-4fc7-9069-b51f777364a6/resourceGroups/rg-ace-minilab/providers/Microsoft.Network/publicIPAddresses/pip-vm-ace-minilab-01",
                "subnet_id": "/subscriptions/b842323e-2bef-4fc7-9069-b51f777364a6/resourceGroups/rg-ace-minilab/providers/Microsoft.Network/virtualNetworks/vnet-ace-minilab/subnets/app-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "nic-vm-ace-minilab-01",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "rg-ace-minilab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b842323e-2bef-4fc7-9069-b51f777364a6/resourceGroups/rg-ace-minilab/providers/Microsoft.Network/networkSecurityGroups/nsg-app-subnet",
            "location": "westeurope",
            "name": "nsg-app-subnet",
            "resource_group_name": "rg-ace-minilab",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-from-my-ip",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "102.89.76.186/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh_from_me",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/b842323e-2bef-4fc7-9069-b51f777364a6/resourceGroups/rg-ace-minilab/providers/Microsoft.Network/networkSecurityGroups/nsg-app-subnet/securityRules/allow-ssh-from-my-ip",
            "name": "allow-ssh-from-my-ip",
            "network_security_group_name": "nsg-app-subnet",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-ace-minilab",
            "source_address_prefix": "102.89.76.186/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b842323e-2bef-4fc7-9069-b51f777364a6/resourceGroups/rg-ace-minilab/providers/Microsoft.Network/publicIPAddresses/pip-vm-ace-minilab-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.180.171.114",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-vm-ace-minilab-01",
            "resource_group_name": "rg-ace-minilab",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b842323e-2bef-4fc7-9069-b51f777364a6/resourceGroups/rg-ace-minilab/providers/Microsoft.Network/virtualNetworks/vnet-ace-minilab/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-ace-minilab",
            "virtual_network_name": "vnet-ace-minilab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b842323e-2bef-4fc7-9069-b51f777364a6/resourceGroups/rg-ace-minilab/providers/Microsoft.Network/virtualNetworks/vnet-ace-minilab/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/b842323e-2bef-4fc7-9069-b51f777364a6/resourceGroups/rg-ace-minilab/providers/Microsoft.Network/networkSecurityGroups/nsg-app-subnet",
            "subnet_id": "/subscriptions/b842323e-2bef-4fc7-9069-b51f777364a6/resourceGroups/rg-ace-minilab/providers/Microsoft.Network/virtualNetworks/vnet-ace-minilab/subnets/app-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2ca221c9-c771-45dd-84a5-263a0f950351",
            "id": "/subscriptions/b842323e-2bef-4fc7-9069-b51f777364a6/resourceGroups/rg-ace-minilab/providers/Microsoft.Network/virtualNetworks/vnet-ace-minilab",
            "location": "westeurope",
            "name": "vnet-ace-minilab",
            "resource_group_name": "rg-ace-minilab",
            "subnet": [
              {
                "address_prefix": "10.10.1.0/24",
                "id": "/subscriptions/b842323e-2bef-4fc7-9069-b51f777364a6/resourceGroups/rg-ace-minilab/providers/Microsoft.Network/virtualNetworks/vnet-ace-minilab/subnets/app-subnet",
                "name": "app-subnet",
                "security_group": "/subscriptions/b842323e-2bef-4fc7-9069-b51f777364a6/resourceGroups/rg-ace-minilab/providers/Microsoft.Network/networkSecurityGroups/nsg-app-subnet"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}